Bug 636438 - fix exact tracing for Dictionary (r=lhansen)